--- a/style.css
+++ b/style.css
@@ -6,23 +6,36 @@ font-family: 'Bungee Inline', cursive;
 font-family: 'Bungee Shade', cursive; */
 
 html, body {
-	/* font: 14px/1.21 'Helvetica Neue', arial, sans-serif; */
-	font-family: 'Teko', sans-serif;
+	 /* font: 14px/1.21 'Helvetica Neue', arial, sans-serif;  */
+	  font-family: 'Teko', sans-serif;  
+	/* font-family: 'Squada One', cursive; */
+	/* font-family: 'Bungee Shade', cursive; */
 	font-weight: 400;
 	color: #444;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	overflow-y: scroll;
 	margin: 0;
 	padding: 0;
+	/* overflow: hidden;   */
+	max-width: 100vw;
 }
 
+body {
+	/* position: fixed; */
+}
+
+.list {
+	/* height: 100vh;
+	width: 100vw;  */
+	/* overflow-y: scroll;     */
+	/* -webkit-overflow-scrolling: touch;     */
+}
 
 /* Results  */
 
 .result {
-	width: 100vw;
-	height: 100vh;
+	max-width: 100vw;
+	max-height: 100vh;
 	position: relative;
 }
 
@@ -31,33 +44,68 @@ html, body {
 	position: absolute;
 	bottom: 0;
 	z-index: 10;
+	color: #fff;
+	margin: 15px;
+	margin-bottom: 40px;
 }
 
 .text p {
-	 /* position: absolute;
-	top: 30px;
-	left: 30px;
-	z-index: 10; */
-	font-size: 8rem;
-	color: #fff;   
+	text-transform: uppercase;
 	padding: 0;
 	margin: 0;
+}
+
+.text h2 {
+	line-height: 50px;
+	margin: 0;
+	font-size: 3rem;
+	text-transform: uppercase;
+}
+
+.text-outline {
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
+.text-blocky1 {
+	text-shadow:
+		3px 3px 0 #000,
+		-1px -1px 0 #000,  
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
+.text-blocky2 {
+	text-shadow:
+		2px 2px 0 #000,
+		-1px -1px 0 #000,  
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .cover-img {
 	height: inherit;
 	width: inherit;
   object-fit: cover;
+	max-width: 100vw; 
+	 transform: scale(1.2);  
 }
 
 .overlay {
-	background-color: greenyellow;
-	width: 100vw;
-	height: 100vh;
+	/* background-color: greenyellow; */
 	position: relative;
-	-moz-opacity: 20%;
-	-webkit-opacity: 20%;
-	z-index: 3;
+	/* -moz-opacity: 20%;
+	-webkit-opacity: 20%; */
+	/* z-index: 3; */
+	/* transform: scale(1.1); */
+	height: 100vh;
+	width: 100vw; 
+	overflow: hidden !important; 
 }
 
 /* Effects */
@@ -67,15 +115,27 @@ html, body {
 }
 
 .blur {
-	filter: blur(5px);
-	-webkit-filter: blur(5px);   
+	filter: blur(2px);
+	-webkit-filter: blur(2px);
+	/* transform: scale(1.1);  */
 }
 
-.op2 {
-	opacity: 0.5;
+.details {
+	display: flex;
+	justify-content: space-between;
 }
 
- .bg-aqua:before {
+.where {
+	display: flex;
+	flex-direction: column
+}
+
+.info {
+	display: flex;
+	align-self: flex-end;
+}
+
+.bg-aqua:before {
   content: "";
   display: block;
   position: absolute;
@@ -83,7 +143,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-	 background: rgba(0,255,255, 0.5); 
+	 background: rgba(0,255,255, 0.6); 
   transition: all .3s linear;
 } 
 
@@ -95,7 +155,7 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-	background: rgba(253, 238, 0, 0.5); 
+	background: rgba(253, 238, 0, 0.6); 
 	transition: all .3s linear;
 } 
 
@@ -107,11 +167,11 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-	background: rgba(255, 114, 0, 0.5); 
+	background: rgba(255, 114, 0, 0.6); 
 	transition: all .3s linear;
 } 
 
-.bg-orange:before {
+.bg-pink:before {
   content: "";
   display: block;
   position: absolute;
@@ -119,6 +179,6 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-	background: rgba(255, 114, 0, 0.5); 
+	background: rgba(255, 181, 252, 0.6); 
 	transition: all .3s linear;
 } 
