--- a/style.css
+++ b/style.css
@@ -1,64 +1,155 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade|Squada+One|Teko:600');
 
-/* font-family: 'Teko', sans-serif;
-font-family: 'Squada One', cursive;
-font-family: 'Bungee Inline', cursive;
-font-family: 'Bungee Shade', cursive; */
-
 html, body {
+	font-family: 'Teko', sans-serif;  
 	 /* font: 14px/1.21 'Helvetica Neue', arial, sans-serif;  */
-	  font-family: 'Teko', sans-serif;  
 	/* font-family: 'Squada One', cursive; */
 	/* font-family: 'Bungee Shade', cursive; */
 	font-weight: 400;
-	color: #444;
+	color: #444; 
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	margin: 0;
 	padding: 0;
-	/* overflow: hidden;   */
 	max-width: 100vw;
+	max-height: 100vh;
+	overflow: hidden;
 }
 
-body {
-	/* position: fixed; */
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
 }
 
 .list {
-	/* height: 100vh;
-	width: 100vw;  */
-	/* overflow-y: scroll;     */
-	/* -webkit-overflow-scrolling: touch;     */
+	width: inherit;
+	position: relative;
+	overflow: hidden;
+	overflow-y: scroll;
+	top: -1px;
 }
 
-/* Results  */
+.demo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+	margin: auto 0;
+  min-width: 420px;
+  height: 468px;
+}
 
-.result {
+.tasMob {
+  position: relative;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+}
+
+.tas {
+  position: relative;
+  height: inherit;
+  width: 264px;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+}
+
+.phoneImg {
+  z-index: 100;
+  position: absolute;
+  height: 620px;
+  top: -74px;
+  left: -21px;
+	pointer-events: none;
+	transform: scale(0.95)
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+
+/* Results */
+
+.resultWrapper {
 	max-width: 100vw;
 	max-height: 100vh;
 	position: relative;
+	top: 18px;
+	width: 264px;
+	height: 476px;
 }
 
-
-.text {
+.overlay {
+	-webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
+	-o-object-position: 50% 50%;
+	object-position: 50% 50%;
 	position: absolute;
-	bottom: 0;
-	z-index: 10;
-	color: #fff;
-	margin: 15px;
-	margin-bottom: 40px;
+	height: 100%;
+	width: 100%;
+	overflow: hidden !important;
 }
 
-.text p {
+.cover-img {
+	position: absolute;
+	height: 464px;
+	width: 500px;
+	top: -8px;
+	object-fit: cover;
+	object-position: 50% 50%;
+	max-width: 100%; 
+	transform: scale(1.1);  
+}
+
+.blur {
+	filter: blur(3px);
+	-webkit-filter: blur(3px);
+}
+
+@media (max-width: 600px) {
+	.resultWrapper {
+		width: 100vw;
+		height: 100vh;
+	}
+	.overlay {
+		height: 100vh;
+		width: 100vw;
+	}
+	.cover-img {
+		position: absolute;
+		height: 100vh;
+		width: 100vw;
+		transform: scale(1.2);
+	}
+}
+
+.resultText {
+	position: absolute;
+	bottom: 16px;
+	color: #fff;
+	/* margin: 0 10px; */
+	width: inherit;
+}
+
+.resultHeader {
 	text-transform: uppercase;
 	padding: 0;
-	margin: 0;
+	margin: 0 10px;
 }
 
-.text h2 {
+.resultBodyText {
+	margin: 0 10px;
 	line-height: 50px;
-	margin: 0;
-	font-size: 3rem;
+	margin: 0 10px;
+	font-size: 1.2rem;
 	text-transform: uppercase;
 }
 
@@ -70,7 +161,7 @@ body {
 		1px 1px 0 #000;
 }
 
-.text-blocky1 {
+.blocky-text-1 {
 	text-shadow:
 		3px 3px 0 #000,
 		-1px -1px 0 #000,  
@@ -79,7 +170,7 @@ body {
 		1px 1px 0 #000;
 }
 
-.text-blocky2 {
+.blocky-text-2 {
 	text-shadow:
 		2px 2px 0 #000,
 		-1px -1px 0 #000,  
@@ -88,41 +179,10 @@ body {
 		1px 1px 0 #000;
 }
 
-.cover-img {
-	height: inherit;
-	width: inherit;
-  object-fit: cover;
-	max-width: 100vw; 
-	 transform: scale(1.2);  
-}
-
-.overlay {
-	/* background-color: greenyellow; */
-	position: relative;
-	/* -moz-opacity: 20%;
-	-webkit-opacity: 20%; */
-	/* z-index: 3; */
-	/* transform: scale(1.1); */
-	height: 100vh;
-	width: 100vw; 
-	overflow: hidden !important; 
-}
-
-/* Effects */
-
-.greyscale {
-	filter: grayscale(100%)
-}
-
-.blur {
-	filter: blur(3px);
-	-webkit-filter: blur(3px);
-	/* transform: scale(1.1);  */
-}
-
 .details {
 	display: flex;
 	justify-content: space-between;
+	margin: 0 10px;
 }
 
 .where {
@@ -135,50 +195,27 @@ body {
 	align-self: flex-end;
 }
 
-.bg-aqua:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-	 background: rgba(0,255,255, 0.6); 
-  transition: all .3s linear;
-} 
+/**** Description ****/
+.description {
+	font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
+	width: 100%;
+	padding: 30px;
+}
 
-.bg-yellow:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-	background: rgba(253, 238, 0, 0.6); 
-	transition: all .3s linear;
-} 
+.descHeader {
+	font-size: 2.5rem;
+	font-weight: 200;
+}
 
-.bg-orange:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-	background: rgba(255, 114, 0, 0.6); 
-	transition: all .3s linear;
-} 
+.descDetails {
+}
 
-.bg-pink:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-	background: rgba(255, 181, 252, 0.6); 
-	transition: all .3s linear;
-} 
+.descSubHeader {
+	font-size: 1.5rem;
+	font-weight: 300;
+	margin-bottom: 0;
+}
+
+.descText {
+	margin: 8px auto;
+}
